# flesh-and-blood-proxy

./: .gitignore  Cargo.toml  Trunk.toml  index.html
backend/: .gitignore  Cargo.toml
backend/setup/: init-db.sh
backend/src/: card.rs  main.rs
frontend/: Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json
frontend/public/styles/: style.css
frontend/setup/: init-db.sh
frontend/src/: app.rs  card.rs  lib.rs  main.rs
frontend/src/components/: card_display.rs  card_search.rs  mod.rs
frontend/src/dto/: card.rs
frontend/src/dto/card/: card.rs
frontend/styles/: style.css
src/: card.rs  main.rs
utils/: Cargo.toml
utils/src/: lib.rs
