[package]
name = "flesh-and-blood-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "^0.6.2"
tracing = "^0.1.37"
poem-openapi = { version = "5.1.15", features = ["swagger-ui", "openapi-explorer"]}
poem = "^3.1.11"
sqlx = { version = "^0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "^1", features = ["full"] }
fuzzy-matcher = "0.3.7"
trunk = { version = "^0.21.4", features = ["wasm-bindgen"] }
yew = "^0.21.0"