[package]
name = "flesh-and-blood-proxy-fe"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "^0.6.2"
yew = { version = "^0.21.0", features = ["csr"] }
web-sys = "0.3.77"
serde = "^1.0.219"
serde_json = "^1.0.140"
log = "^0.4.6"
wasm-logger = "^0.2.0"
wasm-bindgen-futures = "0.4.50"
reqwest = "^0.12.21"
gloo = "=0.11.0"
yew-markdown = "0.0.1"
regex = "1.11.1"
